--- a/Deep_Env/Dockerfile
+++ b/Deep_Env/Dockerfile
@@ -147,3 +147,4 @@ ENV NOTVISIBLE="in users profile"
 RUN echo "export VISIBLE=now" >> /etc/profile
 EXPOSE 22
 CMD ["/usr/sbin/sshd", "-D"]
+CMD ["/etc/init.d/ssh", "restart"]
