entrypoint mis-used

--- a/Deep_Env/Dockerfile
+++ b/Deep_Env/Dockerfile
@@ -146,4 +146,4 @@ EXPOSE 6006
 ENV NOTVISIBLE="in users profile"
 RUN echo "export VISIBLE=now" >> /etc/profile
 EXPOSE 22
-ENTRYPOINT ["/etc/init.d/ssh", "restart"]
+CMD ["/etc/init.d/ssh", "restart"]
