cupy install bug fix

--- a/Deep_Env/Dockerfile
+++ b/Deep_Env/Dockerfile
@@ -87,7 +87,7 @@ RUN APT_INSTALL="apt-get install -y --no-install-recommends" && \
         ffmpeg-python \
         redis \
         flask \
-        cupy \
+        cupy-cuda100 \
         && \
 
     apt-get update -y && \
